--- a/scss/actives.scss
+++ b/scss/actives.scss
@@ -242,7 +242,7 @@
         height: 20px;
         right: -24px;
         top: 6px;
-        background-image: url("https://d25ebjvanew4na.cloudfront.net/static/icon-coin.svg");
+        background-image: url("https://cdn.umperium.com/static/icon-coin.svg");
         background-size: cover;
       }
     }
@@ -261,7 +261,7 @@
         height: 14px;
         right: -17px;
         top: 4px;
-        background-image: url("https://d25ebjvanew4na.cloudfront.net/static/icon-coin.svg");
+        background-image: url("https://cdn.umperium.com/static/icon-coin.svg");
         background-size: cover;
       }
     }
@@ -314,7 +314,7 @@
           height: 14px;
           right: -17px;
           top: 4px;
-          background-image: url("https://d25ebjvanew4na.cloudfront.net/static/icon-coin.svg");
+          background-image: url("https://cdn.umperium.com/static/icon-coin.svg");
           background-size: cover;
         }
       }
@@ -356,7 +356,7 @@
 .dailyCard {
   display: flex;
   position: relative;
-  background-image: url("https://d25ebjvanew4na.cloudfront.net/static/card-of-the-day-bg@3x.png.webp");
+  background-image: url("https://cdn.umperium.com/static/card-of-the-day-bg@3x.png.webp");
   background-position: center;
   background-size: cover;
   background-repeat: no-repeat;
@@ -401,7 +401,7 @@
     position: relative;
     width: 82px;
     height: 93px;
-    background-image: url("https://d25ebjvanew4na.cloudfront.net/static/card-of-the-day-timer.svg");
+    background-image: url("https://cdn.umperium.com/static/card-of-the-day-timer.svg");
     background-position: center;
     background-size: cover;
     background-repeat: no-repeat;
@@ -434,7 +434,7 @@
   }
 }
 .activesModalDaily {
-  background-image: url("https://d25ebjvanew4na.cloudfront.net/static/daily-modal-bg@3x.png.webp") !important;
+  background-image: url("https://cdn.umperium.com/static/daily-modal-bg@3x.png.webp") !important;
   background-size: cover;
   background-position: left top;
   padding-bottom: 7px;
