--- a/scss/boost.scss
+++ b/scss/boost.scss
@@ -49,6 +49,7 @@
         font-size: 13px;
         line-height: 16px;
         margin-bottom: 6px;
+        color: #fff;
       }
       &Body {
         font-weight: 700;
